# test_matrix_artec_3d

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  matrix_test.cpp  matrix_test.h  test.cpp
matrix/: matrix.hpp  matrix_ops.hpp
src/: test.cpp
src/matrix/: matrix.hpp  matrix_base.hpp  matrix_ops.hpp
